--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,14 +1,13 @@
-# main links
+# main links links
 main:
-  - title: "About"
-    url: /about/
-  - title: "Machine Learning"
-    url: /machine-learning/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+  
+  - title: "Portfolio"
+    url: /portfolio/
+        
+  - title: "Blog Posts"
+    url: /year-archive/
+    
+  - title: "CV"
+    url: /cv/
+    
+ 
