--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,14 @@
-# main links links
+# main links
 main:
-  
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
- 
+  - title: "About"
+    url: /about/
+  - title: "Machine Learning"
+    url: /machine-learning/
+  # - title: "About"
+  #   url: https://mmistakes.github.io/minimal-mistakes/about/
+  # - title: "Sample Posts"
+  #   url: /year-archive/
+  # - title: "Sample Collections"
+  #   url: /collection-archive/
+  # - title: "Sitemap"
+  #   url: /sitemap/
