added fa-kaggle and zindi link

--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   facebook         : "onuohasilver"
   foursquare       :
   github           : "onuohasilver"
-  gitlab           :
+  zindi            : "cat_ah_blanche"
   google_plus      :
   keybase          :
   instagram        :
