new cv added to the header

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
   - title: "Machine Learning"
     url: /machine-learning/
   - title: "CV"
-    url: /resume/
+    url: /resume.pdf/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
