--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Hello, world! I'm Onuoha Obinna
 description: > # this means to ignore newlines until "baseurl:"
   "A collection of my works and the thoughts that run through my mind as I learn to code. all things data science"
 permalink: ':title/'
-baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
